--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "^14.2.7",
     "node": "^21.2.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "eslint": "^8",
